small fixes in mobile version of aligning

--- a/styles/style.css
+++ b/styles/style.css
@@ -14,7 +14,7 @@ body {
 
 main {
     display: grid;
-    place-content: center;
+    justify-content: center;
     min-height: 100vh;
 }
 
